nav overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 html{
     font-family: jameel noori nastaleeq;
     font-weight: 700;
+    font-size: 10px;
 }
 a{
     text-decoration: none;
@@ -64,7 +65,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 1rem 4rem;
-    overflow-x: hidden;
+    
     
 }
 .nav-links{
